# matrix-kmp

./: .gitignore  CMakeLists.txt  README.md  Runner.kt  build.gradle.kts  gradle.properties  settings.gradle.kts
benchmarks/: build.gradle.kts
benchmarks/src/main/kotlin/dev/demo/matrix/bench/: Main.kt
matrixlib/: build.gradle.kts
matrixlib/src/commonMain/kotlin/dev/demo/matrix/: Matrix.kt  NativeErrors.kt
matrixlib/src/jvmMain/kotlin/dev/demo/matrix/: MatrixJvm.kt  NativeLoader.kt
matrixlib/src/jvmMain/kotlin/dev/demo/matrix/jvm/: MatrixJvm.kt  NativeLoader.kt
matrixlib/src/jvmTest/kotlin/: MatrixJvmTest.kt
matrixlib/src/linuxX64Main/kotlin/dev/demo/matrix/: MatrixNative.kt
matrixlib/src/nativeInterop/cinterop/: matrix.def
matrixlib/src/nativeMain/kotlin/dev/demo/matrix/native/: MatrixNative.kt
matrixlib/src/nativeTest/kotlin/: MatrixNativeTest.kt
native/include/: matrix_c.h  matrix_core.hpp
native/jni/: matrix_jni.cpp
native/src/: matrix_c.cpp  matrix_core.cpp
